# fruitCognition

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  TUTORIAL.md
fruitAGNTCY/fruit_agents/fruit_cognition/: .env.example  Makefile  README.md  docker-compose.yaml  fruit_cognition_dashboard.json  pyproject.toml
fruitAGNTCY/fruit_agents/fruit_cognition/agents/farms/brazil/: agent.py  agent_executor.py  card.py  farm_server.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/farms/colombia/: agent.py  agent_executor.py  card.py  farm_server.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/farms/vietnam/: agent.py  agent_executor.py  card.py  farm_server.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/logistics/accountant/: agent.py  agent_executor.py  card.py  server.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/logistics/farm/: agent.py  agent_executor.py  card.py  server.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/logistics/helpdesk/: agent_executor.py  card.py  server.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/logistics/shipper/: agent.py  agent_executor.py  card.py  server.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/mcp_servers/: payment_service.py  utils.py  weather_service.py
fruitAGNTCY/fruit_agents/fruit_cognition/agents/supervisors/auction/: card.py  main.py  suggested_prompts.json
fruitAGNTCY/fruit_agents/fruit_cognition/agents/supervisors/logistics/: card.py  main.py  suggested_prompts.json
fruitAGNTCY/fruit_agents/fruit_cognition/agents/supervisors/recruiter/: agent.py  card.py  dynamic_workflow_agent.py  main.py  models.py  recruiter_client.py  recruiter_service_card.py  shared.py  suggested_prompts.json
fruitAGNTCY/fruit_agents/fruit_cognition/api/: __init__.py
fruitAGNTCY/fruit_agents/fruit_cognition/api/admin/: models_catalog.py  router.py
fruitAGNTCY/fruit_agents/fruit_cognition/api/agentic_workflows/: __init__.py  dtos.py  patterns.py  router.py  server.py  starting_workflows.json  use_cases.py  workflows.py
fruitAGNTCY/fruit_agents/fruit_cognition/cognition/api/: __init__.py  router.py
fruitAGNTCY/fruit_agents/fruit_cognition/cognition/engines/: __init__.py  cost_engine.py  policy_guardrail_engine.py  weather_risk_engine.py
fruitAGNTCY/fruit_agents/fruit_cognition/cognition/schemas/: __init__.py  approval.py  belief.py  evidence.py
fruitAGNTCY/fruit_agents/fruit_cognition/cognition/services/: __init__.py  agent_response_extractor.py  approval_service.py  belief_builder.py  claim_mapper.py  cognition_fabric.py  engine_pipeline.py  intent_manager.py
fruitAGNTCY/fruit_agents/fruit_cognition/common/: a2a_transport_config.py  active_llm_config.py  cors.py  llm.py  logistics_states.py  streaming_capability.py  version.py
fruitAGNTCY/fruit_agents/fruit_cognition/common/workflow_instance_store/: __init__.py  interfaces.py  merge.py  notifier.py  store.py
fruitAGNTCY/fruit_agents/fruit_cognition/config/: config.py  logging_config.py
fruitAGNTCY/fruit_agents/fruit_cognition/config/docker/dir/: apiserver.env
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/agentic-workflows-api/: .helmignore  Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/auction-supervisor/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/brazil-farm/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/colombia-farm/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/local-cluster/: Chart.yaml  Makefile  README.md  config-overrides.yaml.gotmpl  grafana-values.yaml  helmfile.yaml  otel-values.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/logistics-accountant/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/logistics-farm/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/logistics-helpdesk/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/logistics-shipper/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/deployment/helm/logistics-supervisor/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/docker/: Dockerfile.agentic-workflows-api  Dockerfile.auction-supervisor  Dockerfile.brazil-farm  Dockerfile.colombia-farm  Dockerfile.logistics-accountant  Dockerfile.logistics-farm  Dockerfile.logistics-helpdesk  Dockerfile.logistics-shipper  Dockerfile.logistics-supervisor  Dockerfile.payment-mcp  Dockerfile.recruiter-supervisor  Dockerfile.ui  Dockerfile.vietnam-farm  Dockerfile.weather-mcp  README.md
fruitAGNTCY/fruit_agents/fruit_cognition/docs/: Farm_Agent.md  agent_directory_integration.md  group_conversation.md  identity_integration.md  recruiter_dynamic_workflow.md
fruitAGNTCY/fruit_agents/fruit_cognition/frontend/: .env.example  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
fruitAGNTCY/fruit_agents/fruit_cognition/frontend/src/: App.tsx  AppProviders.tsx  main.tsx  useApp.ts  vite-env.d.ts
fruitAGNTCY/fruit_agents/fruit_cognition/schema/: __init__.py  definition_backend.py  errors.py  json_schema.py  validate.py  validation.py
fruitAGNTCY/fruit_agents/fruit_cognition/schema/jsonschemas/: event_type_v1.json  event_v1.json
fruitAGNTCY/fruit_agents/fruit_cognition/schema/openapi/: openapi.yaml
fruitAGNTCY/fruit_agents/fruit_cognition/schema/types/: __init__.py  event.py  event_type.py
fruitAGNTCY/fruit_agents/fruit_cognition/scripts/: push_oasf_records.sh
fruitAGNTCY/fruit_agents/fruit_cognition/tests/: README.md  conftest.py
fruitAGNTCY/fruit_agents/fruit_cognition/tests/integration/: auction_prompt_cases.json  conftest.py  docker_helpers.py  logistics_prompt_cases.json  test_auction.py  test_logistics_supervisor.py
fruitAGNTCY/fruit_agents/recruiter/: pyproject.toml
fruitAGNTCY/fruit_agents/recruiter/tests/integration/: conftest.py
(+169 files in other folders)
